--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Myfont';
+    scroll-behavior: smooth;
 }
 
 /* navbar */
@@ -21,6 +22,7 @@ header{
     justify-content: space-between;
     align-items: center;
     z-index: 10000;
+    backdrop-filter: blur(20px);
 }
 
 header .logo{
