--- a/css/style.css
+++ b/css/style.css
@@ -153,13 +153,13 @@ header ul li:hover a{
     position: relative;
     width: 150px;
     height: 150px;
-    transform: rotate(270deg);
 }
 
 .containerCard .card .porcentage svg{
     position: relative;
     width: 150px;
     height: 150px;
+    transform: rotate(270deg);
 }
 
 .containerCard .card .porcentage svg circle{
@@ -176,6 +176,35 @@ header ul li:hover a{
     stroke: var(--clr);
     stroke-dasharray: 440;
     stroke-dashoffset: calc(440 - (440 * var(--num)) / 100);
+}
+
+.punto{
+    position: absolute;
+    inset: 5px;
+    z-index: 10;
+    transform: rotate(calc(3.6deg * var(--num)));
+    animation: animatePunto 2s linear forwards;
+}
+
+@keyframes animatePunto{
+    0%{
+        transform: rotate(0deg);
+    }
+    100%{
+        transform: rotate(calc(3.6deg * var(--num)));
+    }
+}
+
+.punto::before{
+    content: '';
+    position: absolute;
+    top: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 10px;
+    height: 10px;
+    background: var(--clr);
+    border-radius: 50%;
 }
 
 /* porfolio */
