--- a/css/style.css
+++ b/css/style.css
@@ -114,8 +114,8 @@ header ul li:hover a{
     border-radius: 100%;
 }
 
-/* Servicios */
-#servicios{
+/* Habilidades */
+#habilidades{
     position: relative;
     background-color: #34353a;
     min-height: 100vh;
@@ -144,7 +144,7 @@ header ul li:hover a{
     font-size: 1.1em;
 }
 
-.containerCard{
+.containerHabilidadCard{
     position: relative;
     display: flex;
     align-items: center;
@@ -153,7 +153,7 @@ header ul li:hover a{
     gap: 40px;
 }
 
-.containerCard .card{
+.containerHabilidadCard .cardHabilidad{
     position: relative;
     width: 220px;
     height: 250px;
@@ -164,20 +164,20 @@ header ul li:hover a{
     justify-content: center;
 }
 
-.containerCard .card .porcentage{
+.containerHabilidadCard .cardHabilidad .porcentage{
     position: relative;
     width: 150px;
     height: 150px;
 }
 
-.containerCard .card .porcentage svg{
+.containerHabilidadCard .cardHabilidad .porcentage svg{
     position: relative;
     width: 150px;
     height: 150px;
     transform: rotate(270deg);
 }
 
-.containerCard .card .porcentage svg circle{
+.containerHabilidadCard .cardHabilidad .porcentage svg circle{
     position: relative;
     width: 100%;
     height: 100%;
@@ -187,7 +187,7 @@ header ul li:hover a{
     transform: translate(5px,5px);
 }
 
-.containerCard .card .porcentage svg circle:nth-child(2){
+.containerHabilidadCard .cardHabilidad .porcentage svg circle:nth-child(2){
     stroke: var(--clr);
     stroke-dasharray: 440;
     stroke-dashoffset: calc(440 - (440 * var(--num)) / 100);
@@ -269,15 +269,61 @@ header ul li:hover a{
     color: #fff;
 }
 
-/* porfolio */
-#portfolio{
+/* Proyectos */
+#proyectos{
     position: relative;
     background-color: #34353a;
     min-height: 100vh;
     padding: 120px 100px;
 }
 
-/* contacto */
+.containerProyectoCard{
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 40px;
+        flex-wrap: wrap;
+}
+
+.containerProyectoCard .cardProyecto{
+    position: relative;
+    width: 300px;
+    height: 400px;
+    background: linear-gradient(#00A2FF, #00A2FF, 30%, #054B73 30%, #054B73);
+    margin: 10px;
+    border-radius: 20px;
+    overflow: hidden;
+}
+
+.containerProyectoCard .cardProyecto .imgBox{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: 0.5s;
+    z-index: 10000;
+    border-radius: 20px;
+    overflow: hidden;
+    transform-origin: top;
+}
+
+.containerProyectoCard .cardProyecto:hover .imgBox{
+    transform: translateY(30px) scale(0.5);
+}
+
+.containerProyectoCard .cardProyecto .imgBox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Contacto */
 #contacto{
     position: relative;
     background-color: #34353a;
