--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ header ul li:hover a{
 /* Proyectos */
 #proyectos{
     position: relative;
-    background-color: #34353a;
+    background-color: #2a2a2a;
     min-height: 100vh;
     padding: 120px 100px;
 }
@@ -304,7 +304,7 @@ header ul li:hover a{
     width: 100%;
     height: 100%;
     transition: 0.5s;
-    z-index: 10000;
+    z-index: 1000;
     border-radius: 20px;
     overflow: hidden;
     transform-origin: top;
@@ -321,6 +321,77 @@ header ul li:hover a{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.containerProyectoCard .cardProyecto .contenidoTarjetaProyecto{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    padding-bottom: 30px;
+    transform: translateY(100%);
+    transition: 0.5s;
+}
+
+.containerProyectoCard .cardProyecto:hover .contenidoTarjetaProyecto{
+    transform: translateY(0);
+}
+
+.containerProyectoCard .cardProyecto .contenidoTarjetaProyecto .detalles{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+}
+
+.containerProyectoCard .cardProyecto .contenidoTarjetaProyecto .detalles h2{
+    color: #fff;
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+.containerProyectoCard .cardProyecto .contenidoTarjetaProyecto .detalles span{
+    color: #00A2FF ;
+    font-size: 0.9em;
+    font-weight: 700;
+}
+
+.enlaces{
+    position: relative;
+    display: flex;
+    margin-top: 5px;
+}
+
+.enlaces li{
+    list-style: none;
+    margin: 4px;
+}
+
+.enlaces li a{
+    width: 45px;
+    height: 45px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #3d7199;
+    border-radius: 50%;
+    font-size: 1.5em;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+.enlaces li a:hover{
+    transform: rotate(360deg);
+}
+
+.iconoProyecto{
+    width: 80%;
+    height: 80%;
 }
 
 /* Contacto */
