--- a/css/style.css
+++ b/css/style.css
@@ -400,4 +400,114 @@ header ul li:hover a{
     background-color: #34353a;
     min-height: 100vh;
     padding: 120px 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.perfil{
+    position: relative;
+    width: 500px;
+    height: 500px;
+    background: #191919;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.perfil::before{
+    content: '';
+    position: absolute;
+    inset: -10px 140px;
+    background: linear-gradient(315deg, #00ccff, #d400dc);
+    transition: 0.5s;
+    animation: animate 4s linear infinite;
+}
+
+.perfil:hover::before{
+    inset: -20px 0px;
+}
+
+@keyframes animate {
+    0%{
+        transform: rotate(0deg);
+    }
+    0%{
+        transform: rotate(360deg);
+    }
+}
+
+.perfil::after{
+    content: '';
+    position: absolute;
+    inset: 6px;
+    background: #191919;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.infoPerfil{
+    position: absolute;
+    inset: 20px;
+    border: 6px solid #191919;
+    z-index: 3;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.infoPerfil img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 0.5s;
+    pointer-events: none;
+    z-index: 3;
+}
+
+.perfil:hover .infoPerfil img{
+    opacity: 0;
+}
+
+.infoPerfil h2{
+    position: relative;
+    font-size: 1.5em;
+    text-align: center;
+    color: #fff;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+
+.infoPerfil p{
+    font-weight: 300;
+    color: #aaa;
+    margin-bottom: 20px;
+}
+
+.infoPerfil a{
+    position: relative;
+    padding: 10px 20px;
+    background: #fff;
+    color: #191919;
+    border-radius: 20px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+}
+
+.enlacesPerfil{
+    gap: 10px;
+    display: flex;
+}
+
+.enlacesPerfil a:hover{
+    transition: 0.5s;
+    letter-spacing: 5px;
 }
