--- a/css/style.css
+++ b/css/style.css
@@ -562,6 +562,64 @@ header ul li:hover a{
         padding: 100px 50px;
         grid-template-columns: repeat(2,1fr);
     }
+    .menuNavbar{
+        position: relative;
+        width: 30px;
+        height: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+    .menuNavbar::before{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: #fff;
+        transform: translateY(-10px);
+        transition: 0.5s;
+        box-shadow: 0 10px #fff;
+    }
+    .menuNavbar::after{
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: #fff;
+        transform: translateY(10px);
+        transition: 0.5s;
+    }
+    header.active .menuNavbar::before{
+        transform: translateY(-10px) rotate(45deg);
+        box-shadow: 0 0px #fff;
+    }
+    header.active .menuNavbar::after{
+        transform: translateY(-10px) rotate(315deg);
+    }
+    header ul{
+        display: none;
+    }
+    header.active .menuNavbar{
+        margin-top: 10px;
+    }
+    header.active ul{
+        position: fixed;
+        left: 0;
+        top: 84px;
+        width: 100%;
+        height: calc(100vh - 84px);
+        background: rgba(50,50,50,0.95);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 10000;
+        gap: 20px;
+    }
+    header.active ul li a{
+        font-size: 2em;
+    }
 }
 
 @media (max-width: 700px){
