--- a/css/style.css
+++ b/css/style.css
@@ -514,6 +514,102 @@ header ul li:hover a{
     background: #00A2FF;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modalContent {
+    background-color: #fff;
+    margin: 10% auto;
+    padding: 20px;
+    width: 30%;
+    height: 50%;
+    border-radius: 20px;
+}
+
+.modalContent h2{
+    position: relative;
+    font-size: 2em;
+    text-align: center;
+    color: #191919;
+    font-weight: 700;
+    width: 95%;
+    margin-bottom: 10px;
+}
+
+.modalContent p{
+    text-align: center;
+    font-weight: 500;
+    color: #191919;
+}
+
+.gridSocial{
+    margin-top: 40px;
+    gap: 10px;
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.social{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+}
+
+.enlacesModal{
+    position: relative;
+    display: flex;
+    margin-top: 0px;
+}
+
+
+.enlacesModal li{
+    list-style: none;
+    margin: 4px;
+}
+
+.enlacesModal li a{
+    width: 80px;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 1.5em;
+    text-decoration: none;
+}
+
+.iconoRedes{
+    width: 80%;
+    height: 80%;
+}
+
+.close {
+    position: relative;
+    color: #aaa;
+    float:right;
+    font-size: 3em;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 /* Parte responsive de la web */
 @media (max-width: 900px){
     header{
